# log-monitoring-application

./: .gitignore  20250630T002533_log_output.txt  README.md  main.py  pyproject.toml
src/: log_model.py  utils.py
test/: test_utils.py
