[project]
name = "log-monitoring-application"
version = "0.1.0"
description = "An application that processes log files to calculate job durations, apply threshold indicators to an output log file."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "loguru>=0.7.3",
    "pendulum>=3.1.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
